# project-i

./: .gitignore  dev.sh  pyproject.toml
.github/workflows/: auto.yml
src/project_i/project_i/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
